# libarx5

./: CMakeLists.txt  README.md
include/arx5_base/: can.h  hardware_interface.h  joint_trajectories.h  kinematics_dynamics.h  planner.h  state_estimation.h  teaching.h  trajectories.h
include/hardware/: A8120.h  MotorLibrary.h  can.h
log/: latest_list
saved_data/: gravity_off.txt  test.txt
src/: testAll.cpp  testJointTrajectories.cpp  testKinematicsDynamics.cpp  testPlanner.cpp  testRate.cpp  testStateEstimation.cpp  testTrajectories.cpp
src/arx5_base/: can.cpp  hardware_interface.cpp  joint_trajectories.cpp  kinematics_dynamics.cpp  math_ops.cpp  planner.cpp  rate.cpp  state_estimation.cpp  teaching.cpp
src/arx5_utils/: rate.cpp
src/examples/: calibrate.cpp  gravityOff.cpp  gravityOffPlaying.cpp  gravityOffRecording.cpp  gravityOffTeleoperation.cpp  zeroPosition.cpp
src/hardware/: MotorLibrary.cpp  can.cpp  dbus.cpp
src/test/: test4005.cpp  testHardwareInterface.cpp  testKinematicsDynamics.cpp  testRate.cpp  testTeaching.cpp
urdf/: arx5_kdl.urdf
